  passed *plus* any framework-specific settings culled from the
  environment.  As a side effect, all PasteDeploy application-specific
  config file settings are made available as attributes of the
  ``ISettings`` utility from within BFG.

- Renamed the existing BFG paster template to ``bfg_starter``.  Added
  another template showing default ZODB setup using ``repoze.zodbconn``.

0.6.1 (2009-01-06)
==================

New Modules
-----------

- A new module ``repoze.bfg.url`` has been added.  It contains the
  ``model_url`` API (moved from ``repoze.bfg.traversal``) and an
  implementation of ``urlencode`` (like Python's
  ``urllib.urlencode``) which can handle Unicode keys and values in
  parameters to the ``query`` argument.

Deprecations
------------

- The ``model_url`` function has been moved from
  ``repoze.bfg.traversal`` into ``repoze.bfg.url``.  It can still
  be imported from ``repoze.bfg.traversal`` but an import from
  ``repoze.bfg.traversal`` will emit a DeprecationWarning.

Features
--------

- A ``static`` helper class was added to the ``repoze.bfg.views``
  module.  Instances of this class are willing to act as BFG views
  which return static resources using files on disk.  See the
  ``repoze.bfg.view`` docs for more info.

- The ``repoze.bfg.url.model_url`` API (nee'
  ``repoze.bfg.traversal.model_url``) now accepts and honors a
  keyword argument named ``query``.  The value of this argument
  will be used to compose a query string, which will be attached to
  the generated URL before it is returned.  See the API docs (in
  the docs directory or `on the web
  <http://static.repoze.org/bfgdocs>`_) for more information.

0.6 (2008-12-26)
================

Backwards Incompatibilities
---------------------------

- Rather than prepare the "stock" implementations of the ZCML directives
  from the ``zope.configuration`` package for use under ``repoze.bfg``,
  ``repoze.bfg`` now makes available the implementations of directives