@@ -17,6 +17,14 @@ Features
 - Renamed the existing BFG paster template to ``bfg_starter``.  Added
   another template showing default ZODB setup using ``repoze.zodbconn``.
 
+- Add a method named ``assert_`` to the DummyTemplateRenderer.  This
+  method accepts keyword arguments.  Each key/value pair in the
+  keyword arguments causes an assertion to be made that the renderer
+  received this key with a value equal to the asserted value.
+
+- Projects generated by the paster templates now use the
+  ``DummyTemplateRenderer.assert_`` method in their view tests.
+
 0.6.1 (2009-01-06)
 ==================
 
